--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ server.port=8080
 spring.application.name=camed
 
 #Producao
-#spring.datasource.url=jdbc:postgresql://ep-shiny-haze-adr1rgxr-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-#spring.datasource.username=neondb_owner
-#spring.datasource.password=npg_6iosHPVx3pRe
+spring.datasource.url=jdbc:postgresql://ep-muddy-term-a4jh2q4n-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_CtsYMG0Fy8Xp
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_camed
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/db_camed
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
