--- a/pom.xml
+++ b/pom.xml
@@ -66,34 +66,47 @@
     </dependencies>
 
     <build>
-    <finalName>camed</finalName>
-    <plugins>
-    
-    	<plugin>
-		  <groupId>org.apache.maven.plugins</groupId>
-		  <artifactId>maven-compiler-plugin</artifactId>
-		  <version>3.10.1</version>
-		  <configuration>
-		    <source>17</source>
-		    <target>17</target>
-		    <compilerArgs>
-		      <arg>-parameters</arg>
-		    </compilerArgs>
-		    <annotationProcessorPaths>
-		      <path>
-		        <groupId>org.projectlombok</groupId>
-		        <artifactId>lombok</artifactId>
-		        <version>1.18.34</version>
-		      </path>
-		      <path>
-		        <groupId>org.mapstruct</groupId>
-		        <artifactId>mapstruct-processor</artifactId>
-		        <version>1.5.5.Final</version>
-		      </path>
-		    </annotationProcessorPaths>
-		  </configuration>
-		</plugin>
-    
-	</plugins>
+	  <finalName>camed</finalName>
+	  <plugins>
+	    <!-- Plugin do Spring Boot para gerar fat jar -->
+	    <plugin>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-maven-plugin</artifactId>
+	      <version>${spring.boot.version}</version>
+	      <executions>
+	        <execution>
+	          <goals>
+	            <goal>repackage</goal>
+	          </goals>
+	        </execution>
+	      </executions>
+	    </plugin>
+	
+	    <!-- Plugin do compilador -->
+	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
+	      <artifactId>maven-compiler-plugin</artifactId>
+	      <version>3.10.1</version>
+	      <configuration>
+	        <source>17</source>
+	        <target>17</target>
+	        <compilerArgs>
+	          <arg>-parameters</arg>
+	        </compilerArgs>
+	        <annotationProcessorPaths>
+	          <path>
+	            <groupId>org.projectlombok</groupId>
+	            <artifactId>lombok</artifactId>
+	            <version>1.18.34</version>
+	          </path>
+	          <path>
+	            <groupId>org.mapstruct</groupId>
+	            <artifactId>mapstruct-processor</artifactId>
+	            <version>1.5.5.Final</version>
+	          </path>
+	        </annotationProcessorPaths>
+	      </configuration>
+	    </plugin>
+	  </plugins>
 	</build>
 </project>
